Removed Alternate Index Page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h1>Home</h1>
         </div>
         <div class="body" style="text-align: left;">
-            <div id="hello_div" class="raise" onclick="randomizeHelloMessage()">
+            <div id="hello_div" class="raise" onclick="randomizeHelloMessage()" onload="randomizeHelloMessage()">
                 <img src="images/pfp.png" alt="Profile Picture" class="pixel game_image" style="border: 4px solid #2d0d45">
                 <span id="hello_text">Hello :3</span>
             </div>
