Updated Silly Mode

--- a/html/games.html
+++ b/html/games.html
@@ -78,7 +78,10 @@
             My main goal right now is to improve my skills with the <a href="https://godotengine.org">Godot Game Engine</a>. I have recently switched over from Unity, but I'm still learning the finer details of Godot as well as it's workflow. To do this, I am planning on doing something called the <a href="https://20_games_challenge.gitlab.io">20 Games Challenge</a>. I already have a decent start with a Pong game, but I am <span class="emphasize">again</span> stuck in this loop where I work for a good few days, then lose interest or motivation. However, I think I'm really going to start pushing myself to work on this. I think if I can at least get through a few of these games, I can start to get used to finishing projects as well as learn Godot to a much better degree than I do now.
             <h3>Game Launcher</h3>Other than that, there is not a whole lot in the works. One thing I really want to work on is creating a game launcher that will download games from a GitHub repository that will automatically update when new versions are released. My plans right now are heavily based on the <a href="https://www.minecraft.net/en-us/download">Minecraft Launcher</a>. I have created a few version before this, and they worked pretty well, but they did not fully live up to my expectations. I think once I get a good selection of games, I might take a break to build this launcher. This could also help with testing if I can find a few people interested. Instead of sending them a link or file, I can just tell them to open the launcher and update the game. Idk how feasible this all is, but it's something I'm pretty excited to start working on
         </div>
+
+        <button id="silly_button" style="display: none;" onclick="setSillyMode(false)">Disable Silly Mode :P</button>
+
         <div class="body", style="height: 50px;"></div>
-        <footer></footer>
+        <footer><span id="silly_text"></span></footer>
     </body>
 </html>
