--- a/html/links.html
+++ b/html/links.html
@@ -40,7 +40,10 @@
             <a href="https://www.youtube.com/channel/UCiJuofBRlScYGMjnSd1hzVA" class="button"><span>Youtube</span></a>
             <a href="https://kingtoot.itch.io" class="button"><span>Itch.io</span></a>
         </div>
+
+        <button id="silly_button" style="display: none;" onclick="setSillyMode(false)">Disable Silly Mode :P</button>
+
         <div class="body", style="height: 50px"></div>
-        <footer></footer>
+        <footer><span id="silly_text"></span></footer>
     </body>
 </html>
