--- a/html/gallery.html
+++ b/html/gallery.html
@@ -96,7 +96,10 @@
             <!-- Tweet Iframes -->
             </div>
         </div>
+
+        <button id="silly_button" style="display: none;" onclick="setSillyMode(false)">Disable Silly Mode :P</button>
+
         <div class="body", style="height: 50px"></div>
-        <footer></footer>
+        <footer><span id="silly_text"></span></footer>
     </body>
 </html>
