--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
         </div>
         <div class="body" style="text-align: left;">
             <div id="hello_div" class="raise" onclick="randomizeHelloMessage()">
-                <img src="images/pfp.png" alt="Profile Picture" class="pixel game_image" style="border: 4px solid #2d0d45">
+                <img src="images/pfp.png" alt="Profile Picture" id="home_pfp_normal" class="pixel game_image" style="border: 4px solid #2d0d45;">
+                <img src="images/pfp_cat.png" alt="Cat" id="home_pfp_cat" class="pixel game_image" style="border: 4px solid #2d0d45;display:none">
                 <span id="hello_text" onload="randomizeHelloMessage()">Hello! (click me)</span>
             </div>
             <p>
-                Hello! My name is Jacob Vanluven, but I go by KingToot (or other variations) online. The name originally came from an online flash game I used to play in Jr. High, and for some reason I stuck with it. I am an amateur<a href="html/games.html">Game Developer</a> and <a href="html/gallery.html">Pixel Artist</a>, hoping to do something in game development, or even just general coding or art.
+                Hello! My name is Jacob Vanluven, but I go by KingToot (or other variations) online. The name originally came from an online flash game I used to play in Jr. High, and for some reason I stuck with it. I am an amateur<a href="html/games.html">Game Developer</a>  and <a href="html/gallery.html">Pixel Artist</a>, hoping to do something in game development, or even just general coding or art.
             </p>
             <h2>Interests</h2>
             <p>
@@ -52,7 +53,9 @@
             </p>
         </div>
 
+        <button id="silly_button" style="display: none;" onclick="setSillyMode(false)">Disable Silly Mode :P</button>
+
         <div class="body", style="height: 50px"></div>
-        <footer></footer>
+        <footer><span id="silly_text"></span></footer>
     </body>
 </html>
